fixing alignment error at the menu when logged

--- a/app/assets/stylesheets/content/_header.sass
+++ b/app/assets/stylesheets/content/_header.sass
@@ -40,6 +40,7 @@
       margin-right: 0
       float: right
       text-align: right
+      width: 230px
       a
         font-family: "Lato"
         text-transform: lowercase
